adcionando demais operações

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td>
               <input type="button" class="botaoAux" id="negativo" onclick="maisMenos()" value="+/-">
               <input type="button" class='numero' onclick="preencher(0)" value="0">
-              <input type="button" class="botaoAux" id="ponto" onclick="ponto()" value=".">
+              <input type="button" class="botaoAux" id="virgula" onclick="virgula()" value=".">
               <input type="button" class="igual" onclick='calcular()' value="=">
             </td>
           </tr>
