--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
+
+
+  <script>window.alert(" Para realizar a operação de porcentagem deve-se selecionar o número base no qual quer descobrir (EX: 4) Em seguida deve-se precionar a tecla respectiva a operação de multiplicação [x]. O próximo passo consiste em você digitar o número da porcentagem desejada (EX: 2). Para obter o resultado, basta clicar na tecla [%], 2% de 4 =  0,08")</script>
+  <script>window.alert("As demais operações são feitas de maneira comum.")</script> 
     <div id="calculadora">
         <form name="form">
           <h1 id='title'>Calculadora</h1>
@@ -54,6 +58,7 @@
           </tr>
         </table>
       </div>
+
 </body>
 <script type="text/javascript" src="script.js"></script>
 </html>
